--- a/pixelegg/less/layout_raster_scrollarea.less
+++ b/pixelegg/less/layout_raster_scrollarea.less
@@ -61,7 +61,9 @@
 
 .egw_fw_ui_scrollarea_button_up
 {
+	height: 37px;
     top: 0px;
+	border-bottom: 1px solid silver;
 }
 
 .egw_fw_ui_scrollarea_button_down
